--- a/assets/scss/components/_inputs.scss
+++ b/assets/scss/components/_inputs.scss
@@ -15,3 +15,7 @@
   border:0.5px solid rgba(79, 79, 79, 0.6) !important;
   height: 130px !important;
 }
+.v__textarea-msg{
+  height: 450px !important;
+  border:none !important;
+}
