--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -12,7 +12,9 @@
         box-shadow: inset 2px -2px 13px -1px rgba(217, 113, 89, 1);
     }
 }
-
+.btn-brand-lg{
+  width: 160px;
+}
 .signUp-btn{
     padding: 10px 3rem;
     background: linear-gradient(180deg, #D97159 0%, #08587D 100%);
