--- a/assets/scss/pages/_denomination.scss
+++ b/assets/scss/pages/_denomination.scss
@@ -90,11 +90,28 @@
   background-image: url('../../../assets/images/family_2.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: ce
+  background-position: center;
 }
-.upload__files-input{
+.upload__files-input, .upload{
   width: 100%;
   height: 160px;
   border: 2px dashed rgba(130, 130, 130, 0.5);
   border-radius: 2px;
+}
+.upload__files-input{
+  position: absolute;
+  top: 0;
+  visibility: hidden;
+}
+.upload{
+  text-align: center;
+  padding-top: 2rem;
+  cursor: pointer;
+}
+.button-icon{
+  border-radius: 50%;
+  text-align: center;
+  border: 1px solid;
+  display: inline-block;
+  padding: 10px;
 }
