--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -29,29 +29,30 @@ body[data-page="homepage"]{
     height: 750px;
   }
 }
-ol {
+ol.list-lg {
   list-style: none;
   counter-reset: my-awesome-counter;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  li {
+    counter-increment: my-awesome-counter;
+    display: flex;
+    width: 100%;
+    font-size:20px;
+    margin-bottom: 1.5rem;
+    &::before{
+      content: "0" counter(my-awesome-counter);
+      font-weight: bold;
+      font-size: 3rem;
+      margin-right: 0.5rem;
+      font-family: 'Abril Fatface', serif;
+      line-height: 1;
+    }
+  }
 }
-ol li {
-  counter-increment: my-awesome-counter;
-  display: flex;
-  width: 100%;
-  font-size:20px;
-  margin-bottom: 1.5rem;
-}
-ol li::before {
-  content: "0" counter(my-awesome-counter);
-  font-weight: bold;
-  font-size: 3rem;
-  margin-right: 0.5rem;
-  font-family: 'Abril Fatface', serif;
-  line-height: 1;
-}
+
 .f-abril{
   font-family: 'Abril Fatface', serif;
 }
