--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -446,22 +446,12 @@ body[data-page="homepage"] {
   height: 100%;
 }
 
-.body-bg {
+#get_started {
   background-image: url("../../assets/images/Vector.png");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 500px;
-  margin-top: -10rem;
-  padding-top: 5rem;
-}
-
-@media (max-width: 575px) {
-  .body-bg {
-    margin-top: -25rem;
-    padding-top: 20rem;
-    height: 750px;
-  }
+  height: 130px;
 }
 
 ol.list-lg {
