--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -74,6 +74,7 @@ main{
 //FONT-SIZE
 .f-10{ font-size: 10px; }
 .f-12{ font-size: 12px; }
+.f-13{ font-size: 13px; }
 .f-14{ font-size: $size-1 !important; }
 .f-16{ font-size: $size-2; }
 .f-18{ font-size: $size-3; }
