--- a/assets/scss/layout/_dashboardheader.scss
+++ b/assets/scss/layout/_dashboardheader.scss
@@ -38,17 +38,17 @@
     }
 
 }
-.dropdown-toggle {
-    padding: 0 !important;
-    border-radius: 50%;
-    &:focus{
-        border: 1px solid $color-1;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
-    }
-    &::after{
-        display: none !important;
-    }
-}
+// .dropdown-toggle {
+//     padding: 0 !important;
+//     border-radius: 50%;
+//     &:focus{
+//         border: 1px solid $color-1;
+//         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+//     }
+//     &::after{
+//         display: none !important;
+//     }
+// }
 .dashboard-nav--dropdown{
   width: 60px;
    .dropdown-menu{
