--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1041,3 +1041,79 @@ ol.list-lg li::before {
   background-size: cover;
   background-position: center;
 }
+
+.messages {
+  max-height: 450px;
+  overflow-y: scroll;
+}
+
+.message.message-received {
+  text-align: left;
+}
+
+@media (max-width: 575px) {
+  .message.message-received {
+    text-align: none;
+  }
+}
+
+.message.message-received span {
+  padding: 10px 5px;
+  background: #e5e5e5;
+  border-radius: 20px;
+}
+
+@media (max-width: 575px) {
+  .message.message-received span {
+    line-height: 38px;
+    border-radius: 3px;
+    font-size: 14px;
+  }
+}
+
+.message.message-sent {
+  text-align: right;
+}
+
+.message.message-sent span {
+  padding: 10px 5px;
+  background: #08587d;
+  color: #fff;
+  border-radius: 20px;
+}
+
+@media (max-width: 575px) {
+  .message.message-sent span {
+    line-height: 38px;
+    border-radius: 3px;
+    font-size: 14px;
+  }
+}
+
+.message-image-addon, .message-file-addon {
+  display: inline-block;
+}
+
+.message-image-input, .message-file-input {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  left: 16px;
+  top: 4px;
+  visibility: hidden;
+}
+
+.write-message {
+  width: 720px;
+  position: fixed;
+  bottom: 0;
+}
+
+@media (max-width: 575px) {
+  .write-message {
+    width: 400px;
+  }
+  .write-message .send-message {
+    display: none;
+  }
+}
