--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -729,6 +729,33 @@ ol.list-lg li::before {
   overflow-y: scroll;
 }
 
+.attached-img {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.attached-img .lightbox-img {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.attached-img .dark-overlay {
+  width: 50%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 50%;
+  padding-top: 5rem;
+}
+
+@media (max-width: 575px) {
+  .attached-img .dark-overlay {
+    padding-top: 4rem;
+  }
+}
+
 .nav__bg {
   width: 100%;
   height: 350px;
